--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -99,6 +99,7 @@
               <p><strong>Container:</strong> <span id="containerInfo">test1</span></p>
               <p><strong>Blob:</strong> <span id="blobInfo">photo.jpg</span></p>
             </div>
+            <!-- Thêm vào sau dòng div class="image-info" để hiển thị trạng thái refresh -->
             <div class="refresh-status">
               <p><i class="fas fa-sync fa-spin" style="margin-right: 8px; font-size: 0.8em;"></i> Auto refresh: <span id="refreshTimer">10</span> giây</p>
             </div>
