--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/settings.css" />
+    <link rel="stylesheet" href="../assets/css/chatbot.css" />
   </head>
   <body>
     <!-- Background particles -->
@@ -53,7 +54,7 @@
             <i class="fas fa-clock"></i>
             <span id="clock">--:--:--</span>
             <span id="date">--/--/----</span>
-          </div>          
+          </div>
           <div class="user">
             <div class="user-avatar">
               <img
@@ -131,11 +132,10 @@
       </div>
     </div>
 
-    <link rel="stylesheet" href="../assets/css/chatbot.css">
-    <script src="../assets/js/chatbot.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/settings.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script src="../assets/js/chatbot.js"></script>
   </body>
 </html>
